# CppHSE

./: README.md
cmake/: FindCatch.cmake
contrib/catch/: catch.hpp
tasks/admission/: admission.cpp
tasks/associative_operation/: associative_operation.cpp
tasks/image_processor/: CMakeLists.txt  filtersmanager.cpp  filtersmanager.h  helper.cpp  helper.h  image_processor.cpp  imagework.cpp  imagework.h  parser.cpp  parser.h  readme.md
tasks/image_processor/filters/: crystallize.cpp  crystallize.h  edge_detection_filter.cpp  emboss_filter.h  gaussian_blur_filter.cpp  grayscale_filter.h  image_matrix.h
tasks/image_processor/tests/: test_image.cpp
tasks/mines/: minesweeper.cpp  minesweeper.h
tasks/multiplication/: multiplication.cpp
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/poly/: poly.cpp  poly.h  test.cpp
tasks/scorer/: scorer.cpp
tasks/scorer2/: scorer.cpp  scorer.h
tasks/search/: search.cpp  test.cpp
tasks/search2/: search.cpp  search.h
tasks/sort_students/: sort_students.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: test.cpp  unixpath.cpp
tasks/unixpath2/: test.cpp  unixpath.cpp  unixpath.h
tasks/word2vec/: word2vec.cpp
tasks/zip2/: zip.h
